[project]
name = "python-money"
version = "2.0.0"
description = "Primitives for working with money and currencies in Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD"}
authors = [{name = "Paul Oswald", email = "pauloswald@gmail.com"}]
keywords = ["money", "currency", "finance"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "django>=4.0.10, <=4.2.27",
]

[dependency-groups]
dev = [
    "ruff==0.7.0",
    "django-stubs[compatible-mypy]==4.2.0",
    "mypy>=1.2.0,<1.3",
    "psycopg2==2.9.9",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "pre-commit>=4.3.0",
    "nox>=2025.11.12",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true

[[tool.mypy.overrides]]
module = "money.tests.test_money_operations"
disable_error_code = ["operator"]

[tool.django-stubs]
django_settings_module = "money.tests.settings"

[tool.setuptools.package-data]
money = ["py.typed"]

# Pytest configuration
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "money.tests.settings"
pythonpath = ["."]
python_files = ["test_*.py"]
testpaths = ["money/tests"]
